h2. Change Log

Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/

h3. v0.6 - upcoming
* morphia now uses grails logger *TODO* http://code.google.com/p/morphia/wiki/SLF4JExtension

h3. v0.5.2 - 2010-11-30
* updated morphia library to *0.97*

h3. v0.5.2 - 2010-11-26
* updated morphia library to *0.96*
* added static collection property to access the unterlying mongodb collection
* added addTo* methods support
* by default the classname is not stored for every document anymore. Add annotation @com.google.code.morphia.annotations.Entity(noClassnameStored=false) to enable manually

h3. v0.5.1 - 2010-10-03
* added static update method

h3. v0.5 - 2010-09-15
* Maven is now used to resolve MongoDB driver and morphia dependency
* updated morphia library to *0.95*
** ObjectId is now default id type
** update method uses UpdateOperation now - *breaking change!* - see user guide
* using MongoDB java driver *2.1*
* redefined and extended index mapping

h3. v0.4.3 - 2010-08-26
* Fixes "GRAILSPLUGINS-2405":http://jira.codehaus.org/browse/GRAILSPLUGINS-2405 - Pagination parameters falsely removed

h3. v0.4.2 - 2010-08-20
* Fixes "GRAILSPLUGINS-2399":http://jira.codehaus.org/browse/GRAILSPLUGINS-2399 - Better error handling in case config is missing
* Fixes "GRAILSPLUGINS-2398":http://jira.codehaus.org/browse/GRAILSPLUGINS-2398 - Documentation fixes

h3. v0.4.1 - 2010-08-13
* automatically injected version property now marked transient (it is automatically injected to work with scaffolding)

h3. v0.4 - 2010-08-12
* switched to global AST transformations, so no more annotations for mongo domains needed, *MongoEntity deprecated*
* updated to grails 1.3.4
* mongo artefacts are of type "MongoDomain" again. Plugin works with hibernate again
* updated petclinic

h3. v0.3.2 - 2010-07-20
* updated morphia library to *0.94*
* added support for index mapping
