@@ -1,10 +1,37 @@
 h1. TODOs / ideas for next releases
 
+Implement countAll
+
+class BootStrap {
+   
+    def mongo
+   
+    def init = { servletContext ->
+        def final metaClass = Wish.metaClass
+       
+        metaClass.static.countAll = { Map filter = [:], Map queryParams = [:] ->
+            Query query = mongo.datastore.find(Wish)
+            filter.each { k, v ->
+              query.filter(k.toString(), v)
+            }
+            return query.countAll()
+         }
+    }
+   
+    def destroy = {
+    }
+} 
+
+
+
+* Make conversions between List and MorphiaIterator more convenient
+* Test domain class reloading (Plugin onChange)
+* Test getAll method
+* add a refresh method to instances, to pull current data from db again
 * use "GMongo":http://blog.paulopoiati.com/2010/06/20/gmongo-0-5-released/ as driver wrapper
 * check out "GORM Redis":http://grails.org/plugin/redis plugin and the "inconsequential":http://github.com/grails/inconsequential implementation and derive some best practices
 * add WriteConcern to methods, where applicable
 * move config to dataSources, throw exception that tells to move config for upgraders. Create "Configuration" documentation
-* add a refresh method to instances, to pull current data from db again
 * add option to drop database on startup (dbCreate = "create-drop" // one of 'create', 'create-drop','update' see http://grails.org/doc/1.3.x/guide/3.%20Configuration.html#3.3%20The%20DataSource)
 * map Datastore methods onto Domain classes (as static and instance methods) - updateFirst, findAndUpdate
 * Add test for index definition syntax
