@@ -2,5 +2,5 @@
 #Fri Nov 26 12:54:03 CET 2010
 app.grails.version=1.3.5
 app.name=gorm-mongodb
-app.version=0.5.3
+app.version=0.5.4
 plugins.tomcat=1.3.5
