@@ -5,7 +5,10 @@ Also see the "release notes of underlying morphia library":http://code.google.co
 h3. v0.6 - upcoming
 * morphia now uses grails logger *TODO* http://code.google.com/p/morphia/wiki/SLF4JExtension
 
-h3. v0.5.2 - 2010-11-30
+h3. v0.5.4 - 2010-11-30
+* support for getAll method
+
+h3. v0.5.3 - 2010-11-30
 * updated morphia library to *0.97*
 
 h3. v0.5.2 - 2010-11-26
